[package]
name = "changed"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple change detection"
homepage = "https://github.com/Hoidigan/changed"
repository = "https://github.com/Hoidigan/changed"
# Docs are autolinked to docs.rs
readme = "README.md"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
